# mcp-demo

./: README.md
backend/: Makefile  README.md  pyproject.toml
backend/backend/: main.py  mcp.py
backend/backend/auth/: utils.py
backend/backend/mcp/: process.py  schema.py
backend/backend/routers/: auth.py  llm.py  mcp.py
backend/backend/templates/: login.html.jinja
backend/scripts/: generate_schema.py
chat-extension/: CHANGELOG.md  README.md  package-lock.json  package.json
chat-extension/src/: extension.ts
frontend/: package-lock.json
frontend/src/: App.vue
frontend/src/components/: LoginForm.vue  MyMCPClient.ts
language-server/: README.md  package-lock.json  package.json  tsconfig.json
language-server/src/: server.ts
my-vscode-extension/: package-lock.json  package.json
my-vscode-extension/src/: extension.ts
webview/: README.md  index.html  package-lock.json  package.json  vite.config.js
webview/src/: App.vue
webview/src/components/: Chat.vue  ChatForm.vue  ChatMessage.vue  ChatMessageContent.vue  Login.vue  LoginForm.vue  Logout.vue  MCPClient.ts  MyMCPClient.ts  Tools.vue  store.js
webview/src/components/messages/: AssistantMessage.vue  UserMessage.vue
webview/src/components/svgs/: Assistant.vue  Tool.vue  User.vue
