[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Shinya Maeda <shinya@gitlab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.12"}
pyjwt = "^2.10.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = "^2.11.3"
requests = "^2.32.3"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
